# Copyright (c) 2021 Centre National d'Etudes Spatiales (CNES).
#
# This file is part of Pandora2D
# (see https://github.com/CNES/Pandora2d).
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

# Pandora2d setup configuration file

# package setup main metadata
[metadata]
name = pandora2d
author = CNES
author_email = emmanuelle.sarrazin@cnes.fr
url =
project_urls =
    Source =
    Documentation =
description =
long_description = file:README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
platform = any
keywords:
classifiers =
    Development Status :: 4 - Beta 
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    Environment :: Console
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6

setup_requires =
    setuptools
    setuptools_scm # Following https://pypi.org/project/setuptools-scm/

#Pandora2d packages dependencies
install_requires =
    numpy>=1.17.0
    rasterio
    transitions
    json-checker
    xarray
    numba
    pandora>=0.5.0

package_dir =
    . = pandora2d
packages = find:


[options.extras_require]
dev =
    pytest
    pytest-cov
    pre-commit
    isort>=5.8.0                  # Check imports
    black>=21.5b0                 # PEP8 format code
    pylint>=2.8.2                 # General linter with more rules
    setuptools_scm                # version from git tag
    mypy                          # static type checker

docs =
    sphinx
    sphinx_rtd_theme
    sphinx_autoapi

notebook =
    matplotlib
    graphviz
    notebook

# Pandora2d entry points cli scripts
[options.entry_points]
console_scripts =
    pandora2d = pandora2d.Pandora2d:main

# Specify no universal wheel supported (only Python3)
[bdist_wheel]
universal = false
